--- a/styles/fonts/roboto.css
+++ b/styles/fonts/roboto.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: 'Roboto';
   src: local('Roboto'), local('Roboto-Regular'),
-  url('/fonts/roboto/Roboto-Regular.woff2') format('woff2'),
-  url('/fonts/roboto/Roboto-Regular.woff') format('woff');
+  url('../../fonts/roboto/Roboto-Regular.woff2') format('woff2'),
+  url('../../fonts/roboto/Roboto-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -11,8 +11,8 @@
 @font-face {
   font-family: 'Roboto';
   src: local('Roboto Italic'), local('Roboto-Italic'),
-  url('/fonts/roboto/Roboto-Italic.woff2') format('woff2'),
-  url('/fonts/roboto/Roboto-Italic.woff') format('woff');
+  url('../../fonts/roboto/Roboto-Italic.woff2') format('woff2'),
+  url('../../fonts/roboto/Roboto-Italic.woff') format('woff');
   font-weight: normal;
   font-style: italic;
   font-display: swap;
@@ -21,8 +21,8 @@
 @font-face {
   font-family: 'Roboto';
   src: local('Roboto Bold'), local('Roboto-Bold'),
-  url('/fonts/roboto/Roboto-Bold.woff2') format('woff2'),
-  url('/fonts/roboto/Roboto-Bold.woff') format('woff');
+  url('../../fonts/roboto/Roboto-Bold.woff2') format('woff2'),
+  url('../../fonts/roboto/Roboto-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -31,8 +31,8 @@
 @font-face {
   font-family: 'Roboto';
   src: local('Roboto Black'), local('Roboto-Black'),
-  url('/fonts/roboto/Roboto-Black.woff2') format('woff2'),
-  url('/fonts/roboto/Roboto-Black.woff') format('woff');
+  url('../../fonts/roboto/Roboto-Black.woff2') format('woff2'),
+  url('../../fonts/roboto/Roboto-Black.woff') format('woff');
   font-weight: 900;
   font-style: normal;
   font-display: swap;
